src/styles/components/sequence-submission.scss
@import '../settings';

.sequence-submission-input {
  width: 100%;
  height: 30vh;
  font-family: $font-family-monospace;
}

@media (min-width: 500px) {
  .sequence-submission-input {
    white-space: nowrap;
  }
}

