fix sequence input not wrapping on firefox

--- a/src/styles/components/sequence-submission.scss
+++ b/src/styles/components/sequence-submission.scss
@@ -8,6 +8,6 @@
 
 @media (min-width: 500px) {
   .sequence-submission-input {
-    white-space: nowrap;
+    white-space: pre;
   }
 }
